testd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-hello-world
    #namespace: nginx
spec:
    replicas: 2
    selector:
        matchLabels:
            app: nginx-hello-world
    template:
        metadata:
            labels:
                app: nginx-hello-world
        spec:
            containers:
            - name: nginx
              image: asdpkp/webapp:v2
              ports:
                  - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
    name: nginx-svc
    #namespace: nginx
spec:
    selector:
        app: nginx-hello-world
    ports:
    - protocol: TCP
      port: 80
      targetPort: 80
          
    type: NodePort
