webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-hello-world
    #namespace: nginx-app-namespace
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nginx-hello-world
    template:
        metadata:
            labels:
                app: nginx-hello-world
        spec:
            containers:
            - name: nginx
              image: asdpkp/nginx-webapp:latest
              ports:
                  - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
    name: nginx-hello-worlds-svc
    #namespace: nginx-app-namespace
spec:
    selector:
        app: nginx-hello-world
    ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 80
          
    type: LoadBalancer
