ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  #annotations:
    #kubernetes.io/ingress.global-static-ip-name: "ip-hw3"
  labels:
    name: test-ingress
spec:
  defaultBackend:
    service:
      name: myapp-svc
      port:
        number: 8080
  rules:
    - host: app.atnk-studentsurvey.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-hello-worlds-svc
              port:
                number: 80
            path: /survey
            pathType: Prefix
            backend:
                    service:
                      name: myapp-svc
                      port:
                            number: 8080
