ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: myapp-ingress
    annotations:
        kubernetes.io/ingress.global-static-ip-name: "ip-hw3"
    labels:
        name: myapp-ingress
spec:
    defaultBackend:
        service:
            name: myapp-svc
            port:
                number: 8080
    rules:
        - host: app.atnk-studentsurvey.com
          http:
              paths:
              - path: /survey
                pathType: Prefix
                backend:
                  service:
                      name: myapp-svc
                      port:
                          number: 8080
